--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,38 @@
 #root {
-  max-width: 1280px;
+  --primary-dark: #006d77;
+  --primary-light: #83c5be;
+  --text: #edf6f9;
+  --secondary-light: #ffddd2;
+  --secondary-dark: #e29578;
+
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container {
+  background-color: var(--primary-dark);
+  max-width: 1280px;
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  display: flex;
+  flex-direction: row;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.sidebar {
+  flex: 0 1 200px;
 }
 
-.card {
-  padding: 2em;
+.shoplist {
+  flex: 1 1 100%;
 }
 
-.read-the-docs {
-  color: #888;
+ul {
+  list-style-type: none;
 }
