--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 #root {
   --primary-dark: #006d77;
   --primary-light: #83c5be;
@@ -31,6 +35,8 @@ h6 {
   max-width: 1280px;
   width: 100%;
   height: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .header {
@@ -51,7 +57,7 @@ h6 {
   border-radius: 1em;
   align-items: flex-start;
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-  height: 100%;
+  height: calc(100% - 100px);
 }
 
 .header,
@@ -70,4 +76,21 @@ h6 {
 
 ul {
   list-style-type: none;
+}
+
+.shoplist-links {
+  padding-inline-start: 1em;
+}
+
+.shoplist-link-item + .shoplist-link-item {
+  margin-top: 0.5em;
+}
+
+.shoplist-link-item a {
+  text-decoration: none;
+  color: var(--text);
+}
+
+.shoplist-link-item a:hover {
+  color: var(--secondary-light);
 }
