--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --background-dark: #36454f;
   --background-dark2: hsl(204, 19%, 35%);
 
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
