--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
   --background-dark: #36454f;
   --background-dark2: hsl(204, 19%, 35%);
 
+  --dark: #212529;
+  --gray: #343a40;
+  --text2: #f8f9fa;
+  --primary: #db4c40;
+  --secondary: #7d82b8;
+  --success: #009951;
+  --failure: #ec221f;
+
   margin: 0 auto;
   height: 100vh;
   width: 100vw;
@@ -117,6 +125,11 @@ ul {
 
   border-radius: 0.6em;
   font-size: 10pt;
+}
+
+.shoplist-item__unit-price,
+.shoplist-item__total-price {
+  font-family: monospace;
 }
 
 .shoplist-item {
