--- a/src/App.css
+++ b/src/App.css
@@ -58,13 +58,13 @@ h6 {
   display: flex;
   /* margin-top: 1rem; */
   flex-direction: row;
-  background-color: var(--background-dark2);
-  --background-dark: #36454f;
-  padding: 1em;
+  /* background-color: var(--background-dark2); */
+  /* padding: 1em; */
   border-radius: 1em;
   align-items: flex-start;
-  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1); */
   height: calc(100% - 100px);
+  column-gap: 1em;
 }
 
 .header,
@@ -76,6 +76,8 @@ h6 {
 
 .sidebar {
   flex: 0 1 200px;
+  height: 100%;
+  /* border-right: 2px solid var(--primary-light); */
 }
 
 .shoplist-wrapper {
@@ -89,11 +91,11 @@ ul {
 }
 
 .shoplist-links {
-  padding-inline-start: 1em;
+  padding-inline-start: 0;
 }
 
 .shoplist-links__item + .shoplist-links__item {
-  margin-top: 0.2em;
+  margin-top: 0.5em;
 }
 
 .shoplist-links__item a {
@@ -121,9 +123,7 @@ ul {
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
-  padding: 0.6em 1em;
-
-  border-radius: 0.6em;
+  padding: 0.6em 1em 0.6em 0em;
   font-size: 10pt;
 }
 
@@ -133,7 +133,25 @@ ul {
 }
 
 .shoplist-item {
+  border-radius: 0.6em;
   background-color: var(--background-dark);
+}
+
+.shoplist-item__title,
+.shoplist-input__title {
+  flex: 1 0 30%;
+}
+
+.shoplist-input__qty,
+.shoplist-input__unit,
+.shoplist-input__unit-price,
+.shoplist-input__total-price,
+.shoplist-item__qty,
+.shoplist-item__unit,
+.shoplist-item__unit-price,
+.shoplist-item__total-price {
+  text-align: right;
+  flex: 0 0 17.5%;
 }
 
 .shoplist-input {
