--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: var(--background-dark);
+  /* background-color: var(--background-dark); */
   color: var(--text);
 }
 
